--- a/src/layouts/home.pug
+++ b/src/layouts/home.pug
@@ -6,6 +6,7 @@ html(lang='en')
     meta(name='description' content=config.siteDescription)
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
     title= title
-    link(rel='stylesheet' href='assets/index.css')
+    style
+      include includes/home-critical.css
   body
     div.container!= content
