--- a/src/layouts/posts-index.pug
+++ b/src/layouts/posts-index.pug
@@ -8,7 +8,11 @@ html(lang='en')
     title= title
     style
       include includes/posts-index-critical.css
-    link(rel='stylesheet' href=`${config.url}/assets/posts-index.css`)
+    link(rel='preload' href=`${config.url}/assets/posts-index.css` as='style' onload='this.onload=null;this.rel="stylesheet"')
+    noscript
+      link(rel='stylesheet' href=`${config.url}/assets/posts-index.css`)
+    script
+      include includes/cssrelpreload.min.js
   body
     header.container.header
       h1.header-title
