--- a/src/layouts/posts-index.pug
+++ b/src/layouts/posts-index.pug
@@ -31,7 +31,7 @@ html(lang='en')
     main.container.article-list
       each post in posts
         article.article
-          a.article-link(href='#')
+          a.article-link(href= post.url)
             div.article-img(style=`background-image: url("${post.featured_image_small || config.posts.defaultFeaturedImageSmall}")`)
             h2.article-title= post.title
             p.article-excerpt= post.excerpt
