--- a/src/assets/scss/posts-index.scss
+++ b/src/assets/scss/posts-index.scss
@@ -92,7 +92,7 @@ header {
     }
 }
 
-.header-subtitle {
+.header-site-description {
     font-size: 1.1rem;
     font-weight: 400;
     line-height: 1.2;
