--- a/src/layouts/posts-index.pug
+++ b/src/layouts/posts-index.pug
@@ -10,9 +10,10 @@ html(lang='en')
     // Facebook Open Graph
     meta(property='og:url' content=url)
     meta(property='og:type' content='website')
+    meta(property='og:site_name' content=config.openGraph.siteName)
+    meta(property='og:locale' content=config.openGraph.locale)
     meta(property='og:title' content=pagination.number > 1 ? `${title} - Page ${pagination.number}` : title)
     meta(property='og:description' content=metaDescription || config.defaultMetaDescription)
-
     if socialImage
       meta(property='og:image' content=socialImage.url)
       meta(property='og:image:width' content=socialImage.width || 1200)
@@ -31,10 +32,8 @@ html(lang='en')
       meta(name='twitter:card' content=config.twitterCard.type)
       meta(name='twitter:site' content=config.twitterCard.site)
       meta(name='twitter:creator' content=config.twitterCard.creator)
-
     meta(name='twitter:title' content=pagination.number > 1 ? `${title} - Page ${pagination.number}` : title)
     meta(name='twitter:description' content=metaDescription || config.defaultMetaDescription)
-
     if socialImage
       meta(name='twitter:image' content=socialImage.url)
     else
