:package: Refactor layouts

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -2,6 +2,7 @@
 $font-size-base: 16px;
 $font-family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 $font-color: #212125;
+$line-height-base: 1.5;
 
 // Breakpoints.
 $screen-sm-min: 576px;
