--- a/src/layouts/includes/nav.pug
+++ b/src/layouts/includes/nav.pug
@@ -1,6 +1,4 @@
-nav.container.nav
+nav.nav
   ul.nav-menu
-    li.nav-menu-item
-      a.btn(href='#') Home
-    li.nav-menu-item
-      a.btn(href='#') Archive
+    li.nav-menu-item: a.btn(href='#') Home
+    li.nav-menu-item: a.btn(href='#') Archive
