--- a/src/assets/scss/home-critical.scss
+++ b/src/assets/scss/home-critical.scss
@@ -10,7 +10,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: $font-size-base;
+    font-size: 1.1rem;
+    line-height: 1.7;
     font-family: $font-family-sans-serif;
     margin: 0;
     color: $font-color;
@@ -18,36 +19,37 @@ body {
 }
 
 .container {
-    max-width: 38rem;
+    max-width: 40rem;
     padding: 1.2rem;
+    box-sizing: border-box;
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: 2.2rem;
     font-weight: 700;
     letter-spacing: .1rem;
-    line-height: 1;
+    line-height: 1.2;
     margin: 0 0 2rem 0;
+
+    @media (min-width: $screen-md-min) {
+        font-size: 3rem;
+    }
 }
 
 p {
-    font-size: 1.1rem;
     letter-spacing: .04rem;
-    line-height: 1.7;
     margin: 0 0 1rem 0;
 }
 
 ul {
     display: flex;
+    flex-wrap: wrap;
     list-style-type: none;
     padding: 0;
-    margin: 2rem 0 0 0;
-    flex-wrap: wrap;
+    margin: 1.5rem 0 0 0;
 }
 
 li {
-    font-size: 1.1rem;
-    line-height: 1.5;
     margin-right: 1.2rem;
 }
 
