--- a/src/assets/scss/posts-index-critical.scss
+++ b/src/assets/scss/posts-index-critical.scss
@@ -7,29 +7,25 @@ html {
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: $font-size-base;
-    line-height: 1.5;
+    font-size: 1rem;
+    line-height: $line-height-base;
     font-family: $font-family-sans-serif;
     margin: 0;
     color: $font-color;
-    background: $bg-color;
+    background-color: $bg-color;
 }
 
 .container {
-    box-sizing: border-box;
-    width: 100%;
     max-width: $max-container-width;
     padding: 0 1rem;
+    margin: 0 auto;
+    box-sizing: border-box;
 }
 
 // Button
 .btn {
     display: block;
-    font-weight: 500;
-    line-height: 1.2;
+    font-weight: 600;
     text-decoration: none;
     padding: .5rem .75rem;
     border: 1px solid $font-color;
@@ -41,14 +37,10 @@ body {
         color: $font-color;
         background: $btn-color;
     }
-
-    &.btn-md {
-        font-size: .9rem;
-    }
 }
 
 // Header
-header {
+.header {
     margin: 2rem 0 1rem 0;
 }
 
@@ -70,15 +62,15 @@ header {
 }
 
 .header-site-description {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     font-weight: 400;
-    line-height: 1.2;
+    line-height: 1.25;
     margin: 0;
 }
 
 // Nav
 .nav {
-    margin: 0 0 2rem 0;
+    margin: 0 0 2.5rem 0;
 }
 
 .nav-menu {
