--- a/src/assets/scss/posts-index.scss
+++ b/src/assets/scss/posts-index.scss
@@ -7,15 +7,19 @@ html {
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: $font-size-base;
-    line-height: 1.5;
+    font-size: 1rem;
+    line-height: $line-height-base;
     font-family: $font-family-sans-serif;
     margin: 0;
     color: $font-color;
-    background: $bg-color;
+    background-color: $bg-color;
+}
+
+.container {
+    max-width: $max-container-width;
+    padding: 0 1rem;
+    margin: 0 auto;
+    box-sizing: border-box;
 }
 
 a:link,
@@ -28,18 +32,10 @@ a:active {
     color: $link-color-hover;
 }
 
-.container {
-    box-sizing: border-box;
-    width: 100%;
-    max-width: $max-container-width;
-    padding: 0 1rem;
-}
-
 // Button
 .btn {
     display: block;
-    font-weight: 500;
-    line-height: 1.2;
+    font-weight: 600;
     text-decoration: none;
     padding: .5rem .75rem;
     border: 1px solid $font-color;
@@ -58,14 +54,10 @@ a:active {
         background: $btn-color-hover;
         transform: translateY(-2px);
     }
-
-    &.btn-md {
-        font-size: .9rem;
-    }
 }
 
 // Header
-header {
+.header {
     margin: 2rem 0 1rem 0;
 }
 
@@ -78,7 +70,7 @@ header {
 
     a {
         text-decoration: none;
-        transition: all .4s ease;
+        transition: color .4s ease;
 
         &:link,
         &:visited {
@@ -93,15 +85,15 @@ header {
 }
 
 .header-site-description {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     font-weight: 400;
-    line-height: 1.2;
+    line-height: 1.25;
     margin: 0;
 }
 
 // Nav
 .nav {
-    margin: 0 0 2rem 0;
+    margin: 0 0 2.5rem 0;
 }
 
 .nav-menu {
@@ -125,14 +117,15 @@ header {
 .article {
     width: 100%;
     margin: 0 0 2rem 0;
-    transition: all .4s ease;
+    transition: transform .4s ease;
 
     &:hover {
         transform: translateY(-2px);
-        transition: all .3s ease;
+        transition: transform .3s ease;
 
         .article-img {
             opacity: .8;
+            transition: opacity .3s ease;
         }
     }
 
@@ -180,7 +173,7 @@ header {
     background-position: center;
     background-size: 100%;
     background-color: #8785A2;
-    transition: all .4s ease;
+    transition: opacity .4s ease;
 
     @media (min-width: $screen-md-min) {
         height: 200px;
@@ -209,7 +202,7 @@ header {
 
 // Footer
 .footer {
-    margin: 3rem 0;
+    margin: 2.5rem 0;
 }
 
 .footer-license {
