--- a/src/layouts/posts-index.pug
+++ b/src/layouts/posts-index.pug
@@ -1,81 +1,31 @@
 doctype html
 html(lang='en')
   head
-    meta(charset='utf-8')
-    meta(http-equiv='x-ua-compatible' content='ie=edge')
-    title= pagination.number > 1 ? `${title} - Page ${pagination.number}` : title
-    meta(name='description' content=metaDescription || config.defaultMetaDescription)
-    meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
-
-    // Facebook Open Graph
-    meta(property='og:url' content=url)
-    meta(property='og:type' content='website')
-    meta(property='og:site_name' content=config.openGraph.siteName)
-    meta(property='og:locale' content=config.openGraph.locale)
-    meta(property='og:title' content=pagination.number > 1 ? `${title} - Page ${pagination.number}` : title)
-    meta(property='og:description' content=metaDescription || config.defaultMetaDescription)
-    if socialImage
-      meta(property='og:image' content=socialImage.url)
-      meta(property='og:image:width' content=socialImage.width || 1200)
-      meta(property='og:image:height' content=socialImage.height || 600)
-    else
-      meta(property='og:image' content=config.openGraph.defaultImage.url)
-      meta(property='og:image:width' content=config.openGraph.defaultImage.width || 1200)
-      meta(property='og:image:height' content=config.openGraph.defaultImage.height || 600)
-
-    // Twitter Card
-    if twitterCard
-      meta(name='twitter:card' content=twitterCard.type || config.twitterCard.type)
-      meta(name='twitter:site' content=twitterCard.site || config.twitterCard.site)
-      meta(name='twitter:creator' content=twitterCard.creator || config.twitterCard.creator)
-    else
-      meta(name='twitter:card' content=config.twitterCard.type)
-      meta(name='twitter:site' content=config.twitterCard.site)
-      meta(name='twitter:creator' content=config.twitterCard.creator)
-    meta(name='twitter:title' content=pagination.number > 1 ? `${title} - Page ${pagination.number}` : title)
-    meta(name='twitter:description' content=metaDescription || config.defaultMetaDescription)
-    if socialImage
-      meta(name='twitter:image' content=socialImage.url)
-    else
-      meta(name='twitter:image' content=config.twitterCard.imageUrl)
-
-    link(rel='canonical' href=url)
-
-    style
-      include includes/posts-index-critical.css
+    include includes/head.pug
+    style: include includes/posts-index-critical.css
     link(rel='preload' href=`${config.url}/assets/posts-index.css` as='style' onload='this.onload=null;this.rel="stylesheet"')
-    noscript
-      link(rel='stylesheet' href=`${config.url}/assets/posts-index.css`)
-    script
-      include includes/cssrelpreload.min.js
+    noscript: link(rel='stylesheet' href=`${config.url}/assets/posts-index.css`)
+    script: include includes/css-rel-preload.js
   body
-    header.container.header
-      h1.header-title
-        a(href='/')= config.title
-      h2.header-site-description= config.siteDescription
+    div.container
+      header.header
+        h1.header-title: a(href='/')= config.title
+        h2.header-site-description= config.siteDescription
+      include includes/nav.pug
 
-    include includes/nav.pug
+      main.article-list
+        each post in posts
+          article.article
+            a.article-link(href= post.url)
+              div.article-img(style=`background-image: url("${post.featuredImageSmall || config.posts.defaultFeaturedImageSmall}")`)
+              h2.article-title= post.title
+              p.article-excerpt= post.excerpt
 
-    main.container.article-list
-      each post in posts
-        article.article
-          a.article-link(href= post.url)
-            div.article-img(style=`background-image: url("${post.featuredImageSmall || config.posts.defaultFeaturedImageSmall}")`)
-            h2.article-title= post.title
-            p.article-excerpt= post.excerpt
+        if pagination.totalPages > 1
+          nav.pagination
+            if pagination.previousUrl
+              a.pagination-link.btn(href= pagination.previousUrl) &larr; Newer Posts
+            if pagination.nextUrl
+              a.pagination-link.btn(href= pagination.nextUrl) Older Posts &rarr;
 
-      if pagination.totalPages > 1
-        nav.pagination
-          if pagination.previousUrl
-            a.pagination-link.btn.btn-md(href= pagination.previousUrl) &larr; Newer Posts
-          if pagination.nextUrl
-            a.pagination-link.btn.btn-md(href= pagination.nextUrl) Older Posts &rarr;
-
-    footer.container.footer
-      p.footer-license.
-        Except where otherwise noted, content on this blog is licensed under a
-        #[a(rel='license' href='https://creativecommons.org/licenses/by/4.0/') Creative Commons Attribution 4.0 International License].
-      ul.footer-menu
-        each url, websiteName in config.socialLinks
-          li.footer-menu-item
-            a.footer-menu-link(title=websiteName href=url)= websiteName
+      include includes/footer.pug
