--- a/src/assets/scss/posts-index-critical.scss
+++ b/src/assets/scss/posts-index-critical.scss
@@ -1,88 +1,8 @@
 @import 'variables';
-
-$max-container-width: 54rem;
-
-html {
-    font-size: $font-size-base;
-}
-
-body {
-    font-size: 1rem;
-    line-height: $line-height-base;
-    font-family: $font-family-sans-serif;
-    margin: 0;
-    color: $font-color;
-    background-color: $bg-color;
-}
+@import 'common-critical';
 
 .container {
-    max-width: $max-container-width;
-    padding: 0 1rem;
-    margin: 0 auto;
-    box-sizing: border-box;
-}
-
-// Button
-.btn {
-    display: block;
-    font-weight: 600;
-    text-decoration: none;
-    padding: .5rem .75rem;
-    border: 1px solid $font-color;
-    box-shadow: 4px 4px 0 #000;
-    box-sizing: border-box;
-
-    &:link,
-    &:visited {
-        color: $font-color;
-        background: $btn-color;
-    }
-}
-
-// Header
-.header {
-    margin: 2rem 0 1rem 0;
-}
-
-.header-title {
-    font-size: 2rem;
-    font-weight: 700;
-    line-height: 1;
-    letter-spacing: .1rem;
-    margin: 0 0 .5rem 0;
-
-    a {
-        text-decoration: none;
-
-        &:link,
-        &:visited {
-            color: $font-color;
-        }
-    }
-}
-
-.header-site-description {
-    font-size: 1.2rem;
-    font-weight: 400;
-    line-height: 1.25;
-    margin: 0;
-}
-
-// Nav
-.nav {
-    margin: 0 0 2.5rem 0;
-}
-
-.nav-menu {
-    display: flex;
-    flex-wrap: wrap;
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-.nav-menu-item {
-    margin: 0 .75rem 0 0;
+    max-width: 54rem;
 }
 
 // Article List
