--- a/src/assets/scss/posts-index.scss
+++ b/src/assets/scss/posts-index.scss
@@ -64,15 +64,15 @@
 }
 
 .article-img {
+    display: block;
+    object-fit: cover;
+    width: 100%;
     height: 175px;
     margin-bottom: .5rem;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
     background-color: #8785A2;
-    transition: opacity .4s ease;
+    transition: opacity 3.4s ease;
 
-    @media (min-width: $screen-md-min) {
+     @media (min-width: $screen-md-min) {
         height: 200px;
     }
 }
