--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -33,6 +33,7 @@ a:active {
 .btn {
     display: block;
     font-weight: 600;
+    line-height: 1.2;
     text-decoration: none;
     padding: .5rem .75rem;
     border: 1px solid $font-color;
@@ -55,15 +56,14 @@ a:active {
 
 // Header
 .header {
-    margin: 2rem 0 1rem 0;
+    margin: 2rem 0 1.25rem 0;
 }
 
 .header-title {
-    font-size: 2rem;
     font-weight: 700;
     line-height: 1;
     letter-spacing: .1rem;
-    margin: 0 0 .5rem 0;
+    margin: 0 0 .4rem 0;
 
     a {
         text-decoration: none;
@@ -82,7 +82,6 @@ a:active {
 }
 
 .header-site-description {
-    font-size: 1.2rem;
     font-weight: 400;
     line-height: 1.25;
     margin: 0;
