--- a/src/assets/scss/post.scss
+++ b/src/assets/scss/post.scss
@@ -8,6 +8,14 @@ $spacing: 1.2rem;
     max-width: 42rem;
 }
 
+.header-title {
+    font-size: 1.2rem;
+}
+
+.header-site-description {
+    font-size: 1rem;
+}
+
 .article {
     font-size: 1.1rem;
     line-height: 1.6;
