--- a/src/assets/scss/posts-index.scss
+++ b/src/assets/scss/posts-index.scss
@@ -5,6 +5,14 @@
     max-width: 54rem;
 }
 
+.header-title {
+    font-size: 2rem;
+}
+
+.header-site-description {
+    font-size: 1.2rem;
+}
+
 // Article List
 .article-list {
     display: flex;
