--- a/src/layouts/includes/nav.pug
+++ b/src/layouts/includes/nav.pug
@@ -1,4 +1,4 @@
 nav.nav
   ul.nav-menu
-    li.nav-menu-item: a.btn(href= config.posts.baseUrl) Home
-    li.nav-menu-item: a.btn(href='#') Archive
+    li.nav-menu-item: a.btn(href= config.posts.baseUrl) Blog
+    li.nav-menu-item: a.btn(href= config.posts.archiveUrl) Archive
