--- a/src/assets/scss/post.scss
+++ b/src/assets/scss/post.scss
@@ -25,15 +25,23 @@ $spacing: 1.2rem;
         line-height: 1.7;
     }
 
+    header {
+        margin: 0 0 $spacing 0;
+    }
+
     // Typography
     h1 {
         font-size: 2.2rem;
         line-height: 1.1;
-        margin: 0 0 $spacing 0;
+        margin: 0 0 0.3rem 0;
 
         @media (min-width: $screen-sm-min) {
             font-size: 2.5rem;
         }
+    }
+
+    .article-date {
+        font-weight: 700;
     }
 
     h2 {
