:zap: Lazy load images

--- a/src/layouts/post.pug
+++ b/src/layouts/post.pug
@@ -18,3 +18,4 @@ html(lang='en')
           time.article-date(datetime=dateFormat(date, 'YYYY-MM-DD') pubdate)= dateFormat(date, 'DD MMMM YYYY')
         | !{content}
       include includes/footer.pug
+      script(src='https://cdnjs.cloudflare.com/ajax/libs/lazysizes/4.0.1/lazysizes.min.js' async)
