:sparkles: Configurable initial img src and handle no-js

--- a/src/assets/scss/_common-critical.scss
+++ b/src/assets/scss/_common-critical.scss
@@ -24,6 +24,13 @@ a:visited {
     color: $link-color;
 }
 
+// Lazyload
+.no-js {
+    img.lazyload {
+        display: none;
+    }
+}
+
 // Button
 .btn {
     display: block;
