--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -29,6 +29,13 @@ a:active {
     color: $link-color-hover;
 }
 
+// Lazyload
+.no-js {
+    img.lazyload {
+        display: none;
+    }
+}
+
 // Button
 .btn {
     display: block;
