--- a/src/assets/scss/post.scss
+++ b/src/assets/scss/post.scss
@@ -66,7 +66,13 @@ $spacing: 1.2rem;
 
     img {
         display: block;
+        margin: 0 auto;
         max-width: 100%;
+
+        .lazyload,
+        .lazyloading {
+            height: 200px;
+        }
     }
 
     ul, ol {
