:sparkles: Use absolute URL for home

--- a/src/layouts/post.pug
+++ b/src/layouts/post.pug
@@ -10,7 +10,7 @@ html.no-js(lang='en')
   body
     div.container
       header.header
-        div.header-title: a(href='/')= config.title
+        div.header-title: a(href= config.url)= config.title
         div.header-site-description= config.siteDescription
       include includes/nav.pug
       main.article
