--- a/src/layouts/includes/head.pug
+++ b/src/layouts/includes/head.pug
@@ -6,3 +6,4 @@ meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit
 include open-graph.pug
 include twitter-card.pug
 link(rel='canonical' href=url)
+link(rel='manifest' href=`${config.url}manifest.json`)
