--- a/src/layouts/post.pug
+++ b/src/layouts/post.pug
@@ -19,4 +19,6 @@ html.no-js(lang='en')
           time.article-date(datetime=dateFormat(date, 'YYYY-MM-DD') pubdate)= dateFormat(date, 'DD MMMM YYYY')
         | !{content}
       include includes/footer.pug
-      script(src='https://cdnjs.cloudflare.com/ajax/libs/lazysizes/4.0.1/lazysizes.min.js' async)
+
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/lazysizes/4.0.1/lazysizes.min.js' async)
+    script(src=manifest['register-service-worker.js'] async)
