--- a/src/layouts/includes/head.pug
+++ b/src/layouts/includes/head.pug
@@ -4,7 +4,7 @@ title= (pagination && pagination.number > 1) ? `${title} - Page ${pagination.num
 meta(name='description' content=metaDescription || excerpt || config.defaultMetaDescription)
 meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
 meta(name='theme-color' content='#ffdf5a')
-meta(name='google-site-verification' content=config.services.google.siteVerificationId)
+meta(name='google-site-verification' content=config.services.googleSearchConsole.siteVerificationId)
 include open-graph.pug
 include twitter-card.pug
 link(rel='canonical' href=url)
