--- a/src/assets/scss/post-critical.scss
+++ b/src/assets/scss/post-critical.scss
@@ -60,7 +60,7 @@ $spacing: 1.2rem;
     img {
         display: block;
         margin: 0 auto;
-        max-width: 100%;
+        width: 100%;
 
         .lazyload,
         .lazyloading {
